--- a/index.html
+++ b/index.html
@@ -3,7 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ToDoList</title>
+    <link rel="stylesheet" href="./css/Bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/Bootstrap/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <script src="./js/Bootstrap/bootstrap.min.js"></script>
+    <script src="./js/script.js"></script>
+    <header>
+      <i class="bi bi-journal-check"></i>
+      <h3>My ToDo List</h3>
+    </header>
+    <form action="#" class="mt-3">
+      <label for="interItem" class="form-label">Enter Item</label>
+      <input type="text" id="interItem" class="form-control" />
+      <button type="button" class="btn btn-secondary btn-sm mt-3">
+        + Add Item
+      </button>
+    </form>
+    <input
+      type="text"
+      class="filter form-control form-control-sm mt-4 mb-4"
+      placeholder="Filter Item"
+    />
+    <ul class="list-group mb-4">
+      <li
+        class="items list-group-item list-group-item-secondary d-flex justify-content-between align-items-center"
+      >
+        workeout<i class="icon-item bi bi-x"></i>
+      </li>
+      <li
+        class="items list-group-item list-group-item-secondary d-flex justify-content-between align-items-center"
+      >
+        workeout<i class="icon-itembi bi-x"></i>
+      </li>
+      <li
+        class="items list-group-item list-group-item-secondary d-flex justify-content-between align-items-center"
+      >
+        workeout<i class="icon-item bi bi-x"></i>
+      </li>
+    </ul>
+    <button type="button" class="clear-btn btn btn-outline-secondary btn-block">
+      clear all
+    </button>
+  </body>
 </html>
