--- a/index.html
+++ b/index.html
@@ -9,43 +9,32 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <script src="./js/Bootstrap/bootstrap.min.js"></script>
-    <script src="./js/script.js"></script>
-    <header>
+    <div class="container col-12 col-md-6">
+       <header>
       <i class="bi bi-journal-check"></i>
       <h3>My ToDo List</h3>
     </header>
-    <form action="#" class="mt-3">
-      <label for="interItem" class="form-label">Enter Item</label>
-      <input type="text" id="interItem" class="form-control" />
-      <button type="button" class="btn btn-secondary btn-sm mt-3">
+    <form class="mt-3" id="Item-form">
+      <label for="list-input" class="form-label">Enter Item</label>
+      <input type="text" id="list-input" class="form-control" />
+      <div id="text-invalid" class="form-text text-danger"></div>
+      <button type="submit" class="btn btn-secondary btn-sm mt-3" id="addBtn">
         + Add Item
       </button>
     </form>
     <input
       type="text"
-      class="filter form-control form-control-sm mt-4 mb-4"
+      class="filter form-control form-control-sm mt-4 mb-4 "
+      id="form-filter"
       placeholder="Filter Item"
     />
-    <ul class="list-group mb-4">
-      <li
-        class="items list-group-item list-group-item-secondary d-flex justify-content-between align-items-center"
-      >
-        workeout<i class="icon-item bi bi-x"></i>
-      </li>
-      <li
-        class="items list-group-item list-group-item-secondary d-flex justify-content-between align-items-center"
-      >
-        workeout<i class="icon-itembi bi-x"></i>
-      </li>
-      <li
-        class="items list-group-item list-group-item-secondary d-flex justify-content-between align-items-center"
-      >
-        workeout<i class="icon-item bi bi-x"></i>
-      </li>
+    <ul class="list-group mb-4" id="main-ul">
     </ul>
-    <button type="button" class="clear-btn btn btn-outline-secondary btn-block">
+    <button type="button" class="clear-btn btn btn-outline-secondary btn-block " id="clear-all">
       clear all
     </button>
+    </div>
+    <script src="./js/Bootstrap/bootstrap.min.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
