--- a/index.html
+++ b/index.html
@@ -9,31 +9,58 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="container col-12 col-md-6">
-       <header>
-      <i class="bi bi-journal-check"></i>
-      <h3>My ToDo List</h3>
-    </header>
-    <form class="mt-3" id="Item-form">
-      <label for="list-input" class="form-label">Enter Item</label>
-      <input type="text" id="list-input" class="form-control" />
-      <div id="text-invalid" class="form-text text-danger"></div>
-      <button type="submit" class="btn btn-secondary btn-sm mt-3" id="addBtn">
-        + Add Item
-      </button>
-    </form>
-    <input
-      type="text"
-      class="filter form-control form-control-sm mt-4 mb-4 "
-      id="form-filter"
-      placeholder="Filter Item"
-    />
-    <ul class="list-group mb-4" id="main-ul">
-    
-    </ul>
-    <button type="button" class="clear-btn btn btn-outline-secondary btn-block " id="clear-all">
-      clear all
-    </button>
+    <div class="container">
+      <div class="card">
+        <div class="card-header">
+          <header>
+            <i class="bi bi-journal-check"></i>
+            <h3>My ToDo List</h3>
+          </header>
+        </div>
+        <div class="card-body">
+          <div class="d-flex bar-container">
+            <div id="myProgress">
+              <div id="myBar"></div>
+            </div>
+            <div id="percent-text"></div>
+          </div>
+
+          <form class="mt-3" id="Item-form">
+            <div class="input-group mb-1">
+              <input
+                type="text"
+                id="list-input"
+                class="form-control"
+                placeholder="add new task ..."
+              />
+              <button
+                type="submit"
+                class="btn btn-outline-secondary"
+                id="addBtn"
+              >
+                + Add
+              </button>
+            </div>
+
+            <span id="text-invalid" class="badge text-bg-danger"></span>
+          </form>
+
+          <input
+            type="text"
+            class="filter form-control form-control-sm mt-4 mb-4"
+            id="form-filter"
+            placeholder="Filter your taskes"
+          />
+          <ul class="list-group mb-4" id="main-ul"></ul>
+          <button
+            type="button"
+            class="clear-btn btn btn-secondary "
+            id="clear-all"
+          >
+            clear all
+          </button>
+        </div>
+      </div>
     </div>
     <script src="./js/Bootstrap/bootstrap.min.js"></script>
     <script src="./js/script.js"></script>
