--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="card-header">
           <header>
             <i class="bi bi-journal-check"></i>
-            <h3>My ToDo List</h3>
+            <h3 class="tittle">My ToDo List</h3>
           </header>
         </div>
         <div class="card-body">
